Add the buttons "start" and "edit" in each task. Now they still aren't functional.

--- a/client/src/css/TasksPage.css
+++ b/client/src/css/TasksPage.css
@@ -10,3 +10,13 @@
 .rowTask:hover {
   background-color: grey;
 }
+
+.taskButtons {
+  display: flex; 
+  justify-content: flex-end
+}
+
+.taskButton {
+  /* margin-left: 10px; */
+}
+
