Rename a css class to a better name and remove an unused class.

--- a/client/src/css/TasksPage.css
+++ b/client/src/css/TasksPage.css
@@ -11,12 +11,7 @@
   background-color: grey;
 }
 
-.taskButtons {
+.taskButtonsColumn {
   display: flex; 
   justify-content: flex-end
 }
-
-.taskButton {
-  /* margin-left: 10px; */
-}
-
