Add to each task two icons that the user will click to move a task up or down in a task group. Implement the necessary code to call the backend operation.

--- a/client/src/css/TasksPage.css
+++ b/client/src/css/TasksPage.css
@@ -33,3 +33,13 @@
 .pointer-icon {
   cursor: pointer;
 }
+
+.moveButtons .row{
+  line-height: 0;
+}
+
+.invisibleWithSpace {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
