Add to task page a fake task group that will be used to create a new task group. When it is clicked, it changes to a input text field.

--- a/client/src/css/TasksPage.css
+++ b/client/src/css/TasksPage.css
@@ -5,6 +5,11 @@
   color: white;  
 }
 
+.row .taskGroup{
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .column-add-task-icon:hover {
   background-color: grey;
 }
