Adjust the icons to move up and down the task groups to put them closer each other and occupying less space.

--- a/client/src/css/TasksPage.css
+++ b/client/src/css/TasksPage.css
@@ -14,6 +14,11 @@
   background-color: grey;
 }
 
+.row .column-icon-move {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .rowTask:hover {
   background-color: grey;
 }
